<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <!--<string name="baichuan_app_key">23336545</string>-->

    <string name="app_name">墨笺</string>
    <string name="app_name_full">墨笺 1.1.0</string>
    <string name="app_name_eng">MoJian</string>
    <string name="app_version">1.1.0</string>
    <string name="app_author">Roocky强力驱动</string>

    <string name="mn_diary">日记</string>
    <string name="mn_diary_vertical">日\n记</string>
    <string name="mn_note">便笺</string>
    <string name="mn_note_vertical">便\n笺</string>
    <string name="mn_setting">设置</string>
    <string name="mn_setting_vertical">设\n置</string>

    <string name="action_delete">删除</string>
    <string name="action_weather">天气</string>
    <string name="action_paper">纸张</string>
    <string name="action_background">背景</string>
    <string name="action_date">日期</string>
    <string name="action_share_picture">图片分享</string>
    <string name="action_share_text">文本分享</string>
    <string name="action_export_txt">导出TXT文件</string>
    <string name="action_remind">提醒</string>
    <string name="action_calendar">日历</string>

    <string name="set_account">个人信息</string>
    <string name="set_nickname">昵称</string>
    <string name="set_sex">性别</string>
    <string name="set_birthday">生日</string>
    <string name="set_address">地址</string>
    <string name="set_signature">个性签名</string>

    <string name="set_base">基本设置</string>
    <string name="set_data">备份与恢复</string>
    <string name="set_security">安全设置</string>
    <string name="set_help">关于与帮助</string>

    <string name="set_size">字体大小</string>
    <string name="set_drawer">抽屉位置</string>
    <string name="set_drawer_detail">%1$s（更改后需重启「墨笺」）</string>
    <string name="set_backup">备份</string>
    <string name="set_backup_detail">备份文件存放路径：“/sdcard/MoJian/MoJian%1$s-%2$s-%3$s_%4$s-%5$s.backup”</string>
    <string name="set_restore">恢复</string>
    <string name="set_restore_detail">手动选择需要恢复的备份文件版本</string>
    <string name="set_lock">日记锁定</string>
    <string name="set_lock_detail">给你的日记加把锁吧: )</string>
    <string name="set_clear_lock">清除锁定</string>
    <string name="set_clear_lock_detail">清除日记锁定: (</string>
    <string name="set_feedback">反馈</string>
    <string name="set_feedback_detail">「墨笺」需要听到你的声音~</string>
    <string name="set_about">关于</string>
    <string name="set_about_detail">「墨笺」的故事</string>

    <string name="path_databases">/data/data/net.roocky.mojian/databases/</string>
    <string name="path_pic">/MoJian/Picture/</string>
    <string name="path_cache">/MoJian/Cache/</string>
    <string name="path_txt">/MoJian/TXT/</string>

    <string name="tt_add_diary">写日记</string>
    <string name="tt_add_note">记便笺</string>

    <string name="toast_null">这天你没写日记呀~</string>
    <string name="toast_delete_success">已成功删除</string>
    <string name="toast_per_success">获取权限成功，再次点击完成操作</string>
    <string name="toast_per_fail">获取权限失败</string>
    <string name="toast_thanks">感谢使用墨笺(～￣▽￣)～</string>
    <string name="toast_to_picture_error">导出图片失败……</string>
    <string name="toast_no_lock">你还没有设置过解锁图案呢……</string>
    <string name="toast_clear_success">解锁图案清除成功~</string>
    <string name="toast_image_overflow">最多插入5张图片(╯﹏╰)</string>
    <string name="toast_image_save">图片已保存至“/sdcard/MoJian/Picture/%1$s”</string>
    <string name="toast_text_overflow">文本长度超出图片分享最大限制</string>
    <string name="toast_remind_cancel">提醒已取消</string>
    <string name="toast_export_txt_success">TXT文件导出成功！路径：/sdcard/MoJian/TXT/%1$s</string>
    <string name="toast_export_txt_failed">TXT文件导出失败！</string>
    <string name="toast_temp_text">你还有未保存的便笺和日记吖，新建便笺和日记去恢复吧~</string>
    <string name="toast_temp_note">你还有未保存的便笺吖，新建便笺去恢复吧~</string>
    <string name="toast_temp_diary">你还有未保存的日记吖，新建日记去恢复吧~</string>

    <string name="dialog_forget_pattern">忘记图案</string>
    <string name="dialog_forget_resolve">快去联系Roocky吧~在“设置”->“反馈”里面给Roocky发邮件</string>
    <string name="dialog_backup">「墨笺」将会备份你的便笺和日记，但是你在便笺和日记中插入的图片需要你手动进行备份: )，图片路径：/sdcard/MoJian/Picture</string>

    <string name="note_remind">「墨笺」会在%1$s提醒你: )</string>
    <!--<string name="feedback_notify">您有%1$d条反馈未读消息</string>-->
    <string name="feedback_title">「墨笺」用户反馈</string>

    <string name="diary_month_day">%1$s月%2$s</string>

    <string name="show_image_only">图片</string>

    <!--小部件-->
    <string name="widget_new">新建</string>
    <string name="widget_item">便笺</string>
    <string name="configure_choose">选择一篇</string>

    <!--需要处理状态栏的设备-->
    <string-array name="devices">
        <item>huawei</item>
        <item>xiaomi</item>
    </string-array>

    <string-array name="year_array">
        <item>二零一零</item>
        <item>二零一一</item>
        <item>二零一二</item>
        <item>二零一三</item>
        <item>二零一四</item>
        <item>二零一五</item>
        <item>二零一六</item>
        <item>二零一七</item>
        <item>二零一八</item>
        <item>二零一九</item>
        <item>二零二零</item>
        <item>二零二一</item>
        <item>二零二二</item>
        <item>二零二三</item>
        <item>二零二四</item>
        <item>二零二五</item>
    </string-array>

    <string-array name="number_array">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>七</item>
        <item>八</item>
        <item>九</item>
        <item>十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>廿</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>卅</item>
        <item>卅一</item>
    </string-array>

    <item type="id" name="tag_id" />
    <item type="id" name="tag_year" />
    <item type="id" name="tag_month"/>
    <item type="id" name="tag_day" />
    <item type="id" name="tag_content" />
    <item type="id" name="tag_background" />
    <item type="id" name="tag_paper" />
    <item type="id" name="tag_weather" />
    <item type="id" name="tag_appwidget_id" />
</resources>
