<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_background"
        android:title="@string/action_background"
        android:icon="@mipmap/ic_wallpaper_black_24dp"
        app:showAsAction="always"
        android:visible="false" />
    <item
        android:id="@+id/action_date"
        android:title="@string/action_date"
        android:icon="@mipmap/ic_looks_one_black_24dp"
        app:showAsAction="always"
        android:visible="false" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@mipmap/ic_delete_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share_picture"
        android:title="@string/action_share_picture"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_text"
        android:title="@string/action_share_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remind"
        android:title="@string/action_remind"
        app:showAsAction="never" />
</menu>