<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_weather"
        android:title="@string/action_weather"
        android:icon="@drawable/weather_sun"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_background"
        android:title="@string/action_background"
        android:icon="@mipmap/ic_filter_vintage_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_paper"
        android:title="@string/action_paper"
        android:icon="@mipmap/ic_color_lens_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_date"
        android:title="@string/action_date"
        android:icon="@mipmap/ic_looks_one_black_24dp"
        app:showAsAction="never" />
</menu>