<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_50">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/grey_500">
        <LinearLayout
            android:id="@+id/ll_account"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdv_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                fresco:roundAsCircle="true"
                fresco:roundingBorderWidth="2dp"
                fresco:roundingBorderColor="@android:color/white"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:placeholderImage="@drawable/avatar"
                app:placeholderImageScaleType="centerCrop"/>
            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <TextView
                android:id="@+id/tv_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:maxLines="3"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/cv_account"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/btn_note"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/mn_note_vertical"
            android:textSize="16sp"
            android:textColor="@color/grey_600"
            android:gravity="center" />
        <!-- 分隔线-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/divideline_vertical"/>
        <TextView
            android:id="@+id/btn_diary"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/mn_diary_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:gravity="center" />
        <!-- 分隔线-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/divideline_vertical"/>
        <TextView
            android:id="@+id/btn_setting"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/mn_setting_vertical"
            android:textSize="16sp"
            android:textColor="@color/grey_600"
            android:gravity="center" />
    </LinearLayout>
    
    <ImageView
        android:layout_width="210dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_500"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>